# secret-paste

./: README.md  pyproject.toml  secret-paste
secret_paste/: cli.py
tests/: test_cli.py
