[project]
name = "secret-paste"
version = "0.1.0"
description = "Prompt for a local secret and hand it to commands without printing it."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Eidos AGI" }
]

[project.scripts]
secret-paste = "secret_paste.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
